<?xml version="1.0" encoding="utf-8"?>
<resources>
    
 	<string name="app_name">VK mini </string>
    <string name="main_url">Vk mini Page</string>
    <string name="title_activity_about">About Application</string>
    <string name="hello_world">Hello</string>
    <string name="in">LogIn</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_news">Vkontakte</string>
    <string name="menu_settings">Menu</string>
    <string name="log_in">LogIn</string>
    <string name="out_in">Exit</string>
    <string name="item1">UP</string>
    <string name="item2">Main page</string>
    <string name="item3">Reload</string>
    <string name="item4">Back</string>
    <string name="item5">Clear Cache</string>
    <string name="item6">Img ON</string>
    <string name="item7">Img OFF</string>
    <string name="item8">About App</string>
    <string name="item9">LogOut</string>
    <string name="item10">About</string>
    <string name="people">People</string>
    <string name="page">News Search</string>
       <string name="settings">Settings</string>
    <string name="title_activity_activity_about">About App</string>
    <string name="licenses">Licenses</string>
    <string name="about_app">About APP</string>
    <string name="out_app">Close APP</string>
    <string name="out_quastion">Do you really want close this application?</string>
    <string name="out_yes">YES!</string>
    <string name="out_no">No.</string>
  <string name="about1">Facebook.</string>
  <string name="about2">Google+.</string>
  <string name="about3">License.</string>
  <string name="about4">About Application.</string>
   <string name="inet_check">No Internet connection. Check if your mobile Internet / WI-FI enabled.</string> 
     <string name="no_email">Sorry, I couldn\'t find any e-mail apps on your phone</string>
	<string name="prog_lizens">Licenses</string>
	
	<string name="about_msg">&lt;b>VK mini&lt;/b> is an mobile mini client of Popular 
	     russian social network - VKontakte.
        &lt;br>&lt;br>
		This program are maded by  Lemberg BMM Studion. Main developer is Bogdan Mukha.
		http://vk.com/infusi0n .
		Web Client Social Network "VKontakte" designed to make life easier for users of the Android platform with a slow mobile internet or official application does not like.
Beautiful, simple, fast, reliable, with all the standard features.


Messages, music, photo, support flash - now all at your smartphone one application.

Main advantages:

Small-volume Internet traffic for downloading content:
-speed:
, small volume occupied RAM:
-takes little space on the smartphone.

Functional VK mini program:
- Ability to not download images to reduce traffic
- News. Comments to News
-Ability to see all comments.
Guidelines.
-Search - advanced.
- Friends list, a list of online friends, offline.
-My favorites
- Messages dialogues.
- Photos. Add photos to album
- Audio recordings.
- Video.
- Subscriptions / Subscribers
- Poll
- Ability to write messages on the walls.
Groups and public pages
		
		Out web site is www.bmm-studio.mobile</string>
    <string name="apache_license">&lt;b>VK mini&lt;/b>&lt;br>
        \u00A9 2013 Mukha Bohdan&lt;br>
        VK mini is licensed under the Apache License Version 2.0.
        &lt;br>&lt;br>
        
		&lt;b>The Apache License Version 2.0&lt;/b>&lt;br>
		You may obtain a copy of the License at&lt;br>
		&lt;center>&lt;a href=\'http://www.apache.org/licenses/LICENSE-2.0\'>
				"http://www.apache.org/licenses/LICENSE-2.0&lt;/a>&lt;/center>&lt;br>
		 See the License for the specific 
		language governing permissions and limitations under the License.</string>
   
</resources>