<menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
    <item
        android:id="@+id/item1"
      
        android:orderInCategory="100"
        android:showAsAction="always|withText"
        android:title="@string/item1"/>
    <item
        android:id="@+id/item2"
   		
        android:orderInCategory="200"
        android:showAsAction="always|withText"
        android:title="@string/item2"/>
    <item
        android:id="@+id/item3"
 		
        android:orderInCategory="300"
        android:showAsAction="ifRoom|withText"
        android:title="@string/item3"/>
    <item
        android:id="@+id/item4"
    
        android:orderInCategory="400"
        android:showAsAction="ifRoom|withText"
        android:title="@string/people"/>
    <item
        android:id="@+id/item5"
        
        android:orderInCategory="400"
        android:showAsAction="ifRoom|withText"
        android:title="@string/page"/>
       <item
        android:id="@+id/settings"
        
        android:title="@string/settings">
        <menu>
            <group
                android:id="@+id/settings_group"
                android:checkableBehavior="single" >
                
                <item
        		android:id="@+id/settings_item5"
    
       			 android:orderInCategory="500"
        		android:showAsAction="never"
        		android:title="@string/item5"/>
			    <item
			        android:id="@+id/settings_item6"
			   
			        android:orderInCategory="600"
			        android:showAsAction="never"
			        android:title="@string/item6"/>
					    <item
					        android:id="@+id/settings_item7"
					  
					        android:orderInCategory="700"
					        android:showAsAction="never"
					        android:title="@string/item7"/>
               
            </group>
        </menu>
    </item>
   
   
    <item
        android:id="@+id/item8"
       
        android:orderInCategory="800"
        android:showAsAction="never"
        android:title="@string/item8"/>
    <item
        android:id="@+id/item9"
        
        android:orderInCategory="900"
        android:showAsAction="never"
        android:title="@string/item9"/>
   
 
</menu>